--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "anti-social-social-api",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node index",
-      "dev": "nodemon index"
+      "start": "node server.js",
+      "dev": "nodemon server.js"
     },
     "repository": {
       "type": "git",
@@ -23,8 +23,5 @@
       "express": "^4.18.1",
       "moment": "^2.29.4",
       "mongoose": "^6.5.2"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.9"
-      }
+    }
   }
